--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,8 @@ img {
 .heading {
   background-image: url("../images/imghero.jpg");
   background-repeat: no-repeat;
+  margin-left: auto;
+  margin-right: auto;
   max-width: 1600px;
   padding-top: 200px;
   padding-bottom: 200px;
