--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ img {
   line-height: 1.2;
   color: var(--main-blu-tx);
 }
+
 .foot .logo {
   padding-bottom: 20px;
   display: inline-block;
@@ -493,4 +494,13 @@ img {
   padding: 20px 24px;
   background: var(--alt-title-cl);
   border: 1px solid var(--color-pkp);
+}
+.blocking {
+}
+.foter-end {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 1.1;
+  color: var(--alt-title-cl);
 }
