--- a/css/style.css
+++ b/css/style.css
@@ -93,10 +93,6 @@ img {
   color: var(--main-blu-tx);
 }
 
-.foot .logo {
-  padding-bottom: 20px;
-  display: inline-block;
-}
 .lg {
   color: var(--blc-clr-txt);
 }
@@ -484,6 +480,14 @@ img {
   letter-spacing: 0.06em;
   color: var(--blc-clr-txt);
 }
+.adress-page-time {
+  display: inline-block;
+  max-width: 231px;
+  margin-right: 70px;
+}
+.blocking {
+  display: inline-block;
+}
 .abzats {
   margin: 0;
   font-size: 16px;
@@ -495,12 +499,26 @@ img {
   background: var(--alt-title-cl);
   border: 1px solid var(--color-pkp);
 }
-.blocking {
-}
+
 .foter-end {
-  margin: 0;
+  margin-bottom: 20px;
+  font-weight: 700;
   text-transform: uppercase;
   font-size: 14px;
   line-height: 1.1;
   color: var(--alt-title-cl);
+}
+.foot .logo {
+  margin-right: 0;
+  margin-bottom: 20px;
+  display: inline-block;
+}
+.foot .container {
+  display: flex;
+  align-items: baseline;
+}
+.link-features {
+  color: var(--alt-title-cl);
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
 }
